Fixed h1 and p not overflowing

--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,7 @@
 
 body {
     background-color: black;
-    background-image: url("./img/logo-transparent.png");
+    background-image: url("./img/translucent.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -51,6 +51,7 @@ div > a:active {
 
 .hero-container {
     display: flex;
+    flex-wrap: wrap;
     margin: 30px;
     width: 70%;
     margin-left: auto;
@@ -66,9 +67,13 @@ div > a:active {
 .text-container {
     width: 650px;
     margin: 0%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 h1 {
+    flex-shrink: 1;
     color: white;
     font-family: 'Roboto';
     font-size: 60px;
@@ -79,11 +84,12 @@ h1 {
 
 p {
     color: white;
-    width: 600px;
+    /* width: 600px; */
     text-align: justify;
     font-size: 20px;
     margin: 0%;
     padding: 15px;
+    word-break: break-all;
 }
 
 .hero-container > img {
@@ -91,6 +97,7 @@ p {
     height: auto;
     max-width: 300px;
     border-radius: 10px;
+    margin-bottom: 10px;
 }
 
 .hero-container > img:hover {
